# ec-molsubtype

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  findings.md  logbook.md  pyproject.toml
demo/: README.md  metadata.tsv  mmrd_biallelic.json  mmrd_biallelic.maf  mmrd_msih.json  mmrd_msih.maf  multiple_pole_p53.json  multiple_pole_p53.maf  nsmp_endometrioid.json  nsmp_endometrioid.maf  p53abn_serous.json  p53abn_serous.maf  p53abn_serous.seg  polemut_clear.json  polemut_clear.maf  polemut_vus.json  polemut_vus.maf  results.tsv
manuscript/: manuscript.md
scripts/: download_cptac_ucec.py  download_tcga_ucec.py  extract_genie_cna.py  extract_genie_ec.py  generate_figures.py  generate_manuscript_figures.py  validate_genie_ec.py  validate_multi_panel.py  validate_tcga.py
src/ec_molsubtype/: __init__.py  classify.py  cli.py  cna.py  evidence.py  figo.py  io.py  mmr.py  models.py  msi.py  pole.py  report.py  signatures.py  spectrum.py  tmb.py  tp53.py
src/ec_molsubtype/data/: mmr_genes.json  pole_pathogenic.json  signature_profiles.json  tp53_pathogenic.json
src/ec_molsubtype/web/: __init__.py  app.py  pdf.py
src/ec_molsubtype/web/routes/: classify.py  cli_docs.py  methods.py
src/ec_molsubtype/web/static/: style.css
src/ec_molsubtype/web/templates/: base.html  cli.html  error.html  index.html  methods.html  results.html
tests/: conftest.py  test_classify.py  test_evidence.py  test_io.py  test_mmr.py  test_pole.py  test_spectrum.py  test_tp53.py
