[project]
name = "ec-molsubtype"
version = "0.1.0"
description = "Molecular subtyping of endometrial cancer from panel sequencing data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
ec-molsubtype = "ec_molsubtype.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ec_molsubtype"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
